[package]
name = "world_countries_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "3.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1", features = ["actix-web"] }
rusqlite = { version = "0.28", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }